--- a/ling-solr-service/pom.xml
+++ b/ling-solr-service/pom.xml
@@ -86,5 +86,12 @@
             <artifactId>servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>5.3.2</version>
+        </dependency>
+
     </dependencies>
 </project>
