--- a/ling-pojo/pom.xml
+++ b/ling-pojo/pom.xml
@@ -12,4 +12,14 @@
     <artifactId>ling-pojo</artifactId>
     <packaging>jar</packaging>
 
+    <properties>
+        <version-hibernate.jpa>1.0.1.Final</version-hibernate.jpa>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>${version-hibernate.jpa}</version>
+        </dependency>
+    </dependencies>
 </project>
