--- a/ling-o2o-service/pom.xml
+++ b/ling-o2o-service/pom.xml
@@ -64,6 +64,11 @@
         </dependency>
         <!-- dubbo相关 -->
         <dependency>
+            <groupId>com.esotericsoftware.kryo</groupId>
+            <artifactId>kryo</artifactId>
+            <version>2.21</version>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
             <exclusions>
