--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <security.version>3.2.3.RELEASE</security.version>
         <solrj.version>4.10.3</solrj.version>
         <ik.version>2012_u6</ik.version>
+        <rocketmq.version>4.3.0</rocketmq.version>
     </properties>
 
     <dependencyManagement>
@@ -90,6 +91,11 @@
                 <version>${spring.version}</version>
             </dependency>
             <!-- dubbo相关 -->
+            <dependency>
+                <groupId>com.esotericsoftware.kryo</groupId>
+                <artifactId>kryo</artifactId>
+                <version>2.21</version>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
@@ -267,6 +273,11 @@
                 <version>1.4.01</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-client</artifactId>
+                <version>${rocketmq.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
